# python-webapp-comparison

./: README.md  pyproject.toml
dash/: dash_app.py
gradio/: gradio_app.py
nicegui/: nicegui_app.py
panel/: panel_app.py
reflex-app/: rxconfig.py
reflex-app/reflex_app/: reflex_app.py
shiny/: app.py  app_core.py  app_express.py
solara/: sol.py
src/python_webapp_comparison/: __init__.py
streamlit/: streamlit_app.py
trame/: trame_app.py  trame_vuetify_app.py
