[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "flet[all]>=0.28.2",
    "gradio>=5.3.0",
    "nicegui>=2.17.0",
    "panel>=1.6.3",
    "plotly>=6.0.1",
    "pylance>=0.26.1",
    "python-fasthtml>=0.12.16",
    "reflex>=0.7.11",
    "shiny>=1.2.0",
    "solara>=1.47.0",
    "streamlit>=1.45.1",
    "watchfiles>=1.0.5",
]
